src/objects/zqu__QuoteRatePlanChargeOption__c.object
<CustomObject>
    <description>Object that overrides some of the predefined values in the Product Rate Plan Charge.</description>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Max_Quantity__c</fullName>
        <description>The maximum number of units allowed for the charge that this option overrides.</description>
        <inlineHelpText>The maximum number of units allowed for the charge that this option overrides.</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Min_Quantity__c</fullName>
        <description>The minimum number of units that must be selected for the charge that this option overrides.</description>
        <inlineHelpText>The minimum number of units that must be selected for the charge that this option overrides.</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge Option</label>
        <referenceTo>zqu__ProductRatePlanChargeOption__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlanCharge__c.zqu__ProductRatePlan__c</field>
                <operation>equals</operation>
                <valueField>$Source.zqu__ProductRatePlan__c</valueField>
            </filterItems>
            <filterItems>
                <field>zqu__ProductRatePlanCharge__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Quote Rate Plan Charge that this option overrides.</description>
        <inlineHelpText>A reference to the Quote Rate Plan Charge that this option overrides.</inlineHelpText>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanOption__c</fullName>
        <label>Quote Rate Plan Option</label>
        <referenceTo>zqu__QuoteRatePlanOption__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Quote Rate Plan Charge Option</label>
    <nameField>
        <label>Quote Rate Plan Charge Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charge Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Default_Quantity_Rule</fullName>
        <active>true</active>
        <description>Default Quantity should be greater than or equal to 0.</description>
        <errorConditionFormula>zqu__Default_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Default_Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity should be greater than or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Max_Quantity_Rule</fullName>
        <active>true</active>
        <description>Max Quantity should be greater than or equal to 0.</description>
        <errorConditionFormula>zqu__Max_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Max_Quantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be greater than or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Quantity_Less_Than_Max</fullName>
        <active>true</active>
        <description>Min quantity should be less than or equal to max quantity.</description>
        <errorConditionFormula>zqu__Min_Quantity__c  &gt;  zqu__Max_Quantity__c</errorConditionFormula>
        <errorDisplayField>zqu__Min_Quantity__c</errorDisplayField>
        <errorMessage>Min quantity should be less than or equal to max quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Quantity_Rule</fullName>
        <active>true</active>
        <description>Min quantity should be greater than or equal to 0.</description>
        <errorConditionFormula>zqu__Min_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Min_Quantity__c</errorDisplayField>
        <errorMessage>Min quantity should be greater than or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Override_Rule</fullName>
        <active>true</active>
        <description>Overridden ProductRatePlanCharge should belong to the QuoteRatePlanOption&apos;s overridden ProductRatePlan.</description>
        <errorConditionFormula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__c  &lt;&gt;  zqu__QuoteRatePlanOption__r.zqu__ProductRatePlan__c</errorConditionFormula>
        <errorDisplayField>zqu__ProductRatePlanCharge__c</errorDisplayField>
        <errorMessage>Overridden ProductRatePlanCharge should belong to the QuoteRatePlanOption&apos;s overridden ProductRatePlan.</errorMessage>
    </validationRules>
</CustomObject>